<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/login_image"
        />

    <TextView
        android:id="@+id/login_singup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        android:textSize="30sp"
        android:layout_marginTop="48dp"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@id/logo_image"
        />
    <TextView
        android:id="@+id/login_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:text="@string/login_page_where_you_can_login_into_page"
        android:layout_below="@id/login_singup_text"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_user_name"
        android:layout_below="@id/login_description"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:layout_below="@id/password"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:padding="12dp"
        android:layout_centerInParent="true"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/already_account_text_view"
            android:layout_below="@id/login_btn"
            android:text="@string/dont_have_a_account_signup"
            android:textAlignment="center"
            android:layout_marginTop="10sp"
            />
    </RelativeLayout>
</ScrollView>